# aurora-dsql-sqlalchemy

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  sample.py  setup.cfg  setup.py  test.cfg
.github/: dependabot.yml
.github/workflows/: cicd.yml  gitleaks-scan.yml  pre-commit.yml  publish-pypi.yml
aurora_dsql_sqlalchemy/: README.md  __init__.py  base.py  psycopg.py  psycopg2.py
auroradsql_sqlalchemy/: __init__.py  base.py  psycopg2.py
examples/pet-clinic-app/: README.md  pyproject.toml  requirements.txt
examples/pet-clinic-app/src/: example.py
examples/pet-clinic-app/test/: test_example.py
test/: conftest.py  test_compiler.py  test_connector_integration.py  test_create_dsql_engine.py  test_suite.py
