[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aurora-dsql-sqlalchemy"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
]

[project.optional-dependencies]
test = ["pytest", "boto3"]
dev = ["black"]

[project.entry-points."sqlalchemy.dialects"]
aurora_dsql = "aurora_dsql_sqlalchemy.psycopg2:AuroraDSQLDialect_psycopg2"
"aurora_dsql.psycopg2" = "aurora_dsql_sqlalchemy.psycopg2:AuroraDSQLDialect_psycopg2"
"aurora_dsql.psycopg" = "aurora_dsql_sqlalchemy.psycopg:AuroraDSQLDialect_psycopg"

[tool.setuptools]
packages = ["aurora_dsql_sqlalchemy"]

[tool.pytest.ini_options]
addopts = "-v  -r chars -s" 
python_files = ["test/*test_*.py"]

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''