[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aurora-dsql-sqlalchemy"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
]

[project.optional-dependencies]
test = ["pytest", "boto3", "pytest-cov", "ruff"]

[project.entry-points."sqlalchemy.dialects"]
auroradsql = "auroradsql_sqlalchemy.psycopg2:AuroraDSQLDialect_psycopg2"
"auroradsql.psycopg2" = "auroradsql_sqlalchemy.psycopg2:AuroraDSQLDialect_psycopg2"

[tool.setuptools]
packages = ["auroradsql_sqlalchemy"]

[tool.pytest.ini_options]
addopts = "-v  -r chars -s" 
python_files = ["test/*test_*.py"]

[tool.ruff]
target-version = "py39"
line-length = 88
lint.select = ["E", "F", "I"]
lint.ignore = []
exclude = [
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
    "sqlalchemy-integ",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"