[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "aurora-dsql-sqlalchemy"
dynamic = ["version"]
description = "Amazon Aurora DSQL dialect for SQLAlchemy"
authors = [{name = "Amazon Web Services"}]
license = {text = "Apache License 2.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Pin SQLAlchemy <2.0.45 due to breaking API change in testing_engine()
    # TODO: Update test/conftest.py to support new signature and remove pin
    "sqlalchemy>=2.0.0,<2.0.45",
    "aurora-dsql-python-connector>=0.1.0"
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

[project.urls]
Repository = "https://github.com/awslabs/aurora-dsql-sqlalchemy"

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "ruff", "hatch-vcs"]
psycopg2 = ["psycopg2-binary>=2.9.0"]
psycopg = ["psycopg[binary]>=3.2.0"]

[project.entry-points."sqlalchemy.dialects"]
# The default dialect uses psycopg (psycopg3) 
auroradsql = "aurora_dsql_sqlalchemy.psycopg:AuroraDSQLDialect_psycopg"
"auroradsql.psycopg2" = "aurora_dsql_sqlalchemy.psycopg2:AuroraDSQLDialect_psycopg2"
# Note: psyscopg (psycopg3) 
"auroradsql.psycopg" = "aurora_dsql_sqlalchemy.psycopg:AuroraDSQLDialect_psycopg" 

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "aurora_dsql_sqlalchemy/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["aurora_dsql_sqlalchemy"]

[tool.pytest.ini_options]
addopts = "-v  -r chars -s" 
python_files = ["test/*test_*.py"]
testpaths = ["test"]

[tool.ruff]
target-version = "py39"
line-length = 88
lint.select = ["E", "F", "I"]
lint.ignore = []
exclude = [
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
    "sqlalchemy-integ",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"